<?php

namespace App\Entity;

use App\Entity\Commande;
use App\Entity\Fournisseur;
use ApiPlatform\Metadata\Get;
use Doctrine\DBAL\Types\Types;
use Doctrine\ORM\Mapping as ORM;
use ApiPlatform\Metadata\ApiResource;
use ApiPlatform\Metadata\GetCollection;
use App\Repository\UtilisateurRepository;
use Doctrine\Common\Collections\Collection;
use Doctrine\Common\Collections\ArrayCollection;
use Symfony\Component\Security\Core\User\UserInterface;
use Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity;
use Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface;
use Symfony\Component\Serializer\Annotation\Groups;

#[ORM\Entity(repositoryClass: UtilisateurRepository::class)]
#[ORM\UniqueConstraint(name: 'UNIQ_IDENTIFIER_EMAIL', fields: ['email'])]
#[UniqueEntity(fields: ['email'], message: 'There is already an account with this email')]
#[ApiResource(
    operations: [
        new Get(
            security: "object == user or is_granted('ROLE_ADMIN')",
            normalizationContext: ['groups' => ['utilisateur:read']]
        )
    ]
)]

class Utilisateur implements UserInterface, PasswordAuthenticatedUserInterface
{
    #[ORM\Id]
    #[ORM\GeneratedValue]
    #[ORM\Column]
     #[Groups(['utilisateur:read'])]
    private ?int $id = null;

    #[ORM\Column(length: 180)]
    #[Groups(['utilisateur:read'])]
    private ?string $email = null;

    /**
     * @var list<string> The user roles
     */
    #[ORM\Column]
    
    private array $roles = [];

    /**
     * @var string The hashed password
     */
    #[ORM\Column]
    private ?string $password = null;

    #[ORM\Column(length: 80)]
    #[Groups(['utilisateur:read'])]
    private ?string $nom = null;

    #[ORM\Column(length: 80)]
    #[Groups(['utilisateur:read'])]
    private ?string $prenom = null;
    

    #[ORM\Column(length: 30, nullable: true)]
    private ?string $telephone = null;

    #[ORM\Column(type: Types::DECIMAL, precision: 5, scale: 2, nullable: true)]
    private ?string $coefficient = null;

    #[ORM\Column(length: 255, nullable: true)]
    private ?string $adresseLivraison = null;

        /**
     * @var Collection<int, Commande>
     */
    #[ORM\OneToMany(targetEntity: Commande::class, mappedBy: 'Commercial')]
    private Collection $commandesCommerciales;


    #[ORM\Column(length: 255, nullable: true)]
    private ?string $adresseFacturation = null;

    /**
     * @var Collection<int, Fournisseur>
     */
    #[ORM\OneToMany(targetEntity: Fournisseur::class, mappedBy: 'Commercial')]
    private Collection $fournisseurs;

    /**
     * @var Collection<int, Commande>
     */
    #[ORM\OneToMany(targetEntity: Commande::class, mappedBy: 'Client')]
    private Collection $commandes;

    #[ORM\ManyToOne(targetEntity: self::class, inversedBy: 'clientsPros')]
    private ?self $Commercial = null;

    /**
     * @var Collection<int, self>
     */
    #[ORM\OneToMany(targetEntity: self::class, mappedBy: 'Commercial')]
    private Collection $clientsPros;

    #[ORM\Column]
    private bool $isVerified = false;

    public function __construct()
    {
        $this->fournisseurs = new ArrayCollection();
        $this->commandes = new ArrayCollection();
        $this->commandesCommerciales = new ArrayCollection();
        $this->clientsPros = new ArrayCollection();

    }

    public function getId(): ?int
    {
        return $this->id;
    }

    public function getEmail(): ?string
    {
        return $this->email;
    }

    public function setEmail(string $email): static
    {
        $this->email = $email;

        return $this;
    }

    /**
     * A visual identifier that represents this user.
     *
     * @see UserInterface
     */
    public function getUserIdentifier(): string
    {
        return (string) $this->email;
    }

    /**
     * @see UserInterface
     */
    public function getRoles(): array
    {
        $roles = $this->roles;
        // guarantee every user at least has ROLE_USER
        $roles[] = 'ROLE_USER';

        return array_unique($roles);
    }

    /**
     * @param list<string> $roles
     */
    public function setRoles(array $roles): static
    {
        $this->roles = $roles;

        return $this;
    }

    /**
     * @see PasswordAuthenticatedUserInterface
     */
    public function getPassword(): ?string
    {
        return $this->password;
    }

    public function setPassword(string $password): static
    {
        $this->password = $password;

        return $this;
    }

    /**
     * @see UserInterface
     */
    public function eraseCredentials(): void
    {
        // If you store any temporary, sensitive data on the user, clear it here
        // $this->plainPassword = null;
    }

    public function getNom(): ?string
    {
        return $this->nom;
    }

    public function setNom(string $nom): static
    {
        $this->nom = $nom;

        return $this;
    }

    public function getPrenom(): ?string
    {
        return $this->prenom;
    }

    public function setPrenom(string $prenom): static
    {
        $this->prenom = $prenom;

        return $this;
    }

    public function getTelephone(): ?string
    {
        return $this->telephone;
    }

    public function setTelephone(?string $telephone): static
    {
        $this->telephone = $telephone;

        return $this;
    }

    public function getCoefficient(): ?string
    {
        return $this->coefficient;
    }

    public function setCoefficient(?string $coefficient): static
    {
        $this->coefficient = $coefficient;

        return $this;
    }

    public function getAdresseLivraison(): ?string
    {
        return $this->adresseLivraison;
    }

    public function setAdresseLivraison(?string $adresseLivraison): static
    {
        $this->adresseLivraison = $adresseLivraison;

        return $this;
    }

    public function getAdresseFacturation(): ?string
    {
        return $this->adresseFacturation;
    }

    public function setAdresseFacturation(?string $adresseFacturation): static
    {
        $this->adresseFacturation = $adresseFacturation;

        return $this;
    }

    /**
     * @return Collection<int, Fournisseur>
     */
    public function getFournisseurs(): Collection
    {
        return $this->fournisseurs;
    }

    public function addFournisseur(Fournisseur $fournisseur): static
    {
        if (!$this->fournisseurs->contains($fournisseur)) {
            $this->fournisseurs->add($fournisseur);
            $fournisseur->setCommercial($this);
        }

        return $this;
    }

    public function removeFournisseur(Fournisseur $fournisseur): static
    {
        if ($this->fournisseurs->removeElement($fournisseur)) {
            // set the owning side to null (unless already changed)
            if ($fournisseur->getCommercial() === $this) {
                $fournisseur->setCommercial(null);
            }
        }

        return $this;
    }

    /**
     * @return Collection<int, Commande>
     */
    public function getCommandes(): Collection
    {
        return $this->commandes;
    }

    public function addCommande(Commande $commande): static
    {
        if (!$this->commandes->contains($commande)) {
            $this->commandes->add($commande);
            $commande->setClient($this);
        }

        return $this;
    }

    public function removeCommande(Commande $commande): static
    {
        if ($this->commandes->removeElement($commande)) {
            // set the owning side to null (unless already changed)
            if ($commande->getClient() === $this) {
                $commande->setClient(null);
            }
        }

        return $this;
    }

        /**
     * @return Collection<int, Commande>
     */
    public function getCommandesCommerciales(): Collection
    {
        return $this->commandesCommerciales;
    }

    public function addCommandeTraitee(Commande $commande): static
    {
        if (!$this->commandesCommerciales->contains($commande)) {
            $this->commandesCommerciales->add($commande);
            $commande->setCommercial($this);
        }

        return $this;
    }

    public function removeCommandeTraitee(Commande $commande): static
    {
        if ($this->commandesCommerciales->removeElement($commande)) {
            // set the owning side to null (unless already changed)
            if ($commande->getCommercial() === $this) {
                $commande->setCommercial(null);
            }
        }

        return $this;
    }

    public function getCommercial(): ?self
    {
        return $this->Commercial;
    }

    public function setCommercial(?self $Commercial): static
    {
        $this->Commercial = $Commercial;

        return $this;
    }

    /**
     * @return Collection<int, self>
     */
    public function getClientsPros(): Collection
    {
        return $this->clientsPros;
    }

    public function addClientsPro(self $clientsPro): static
    {
        if (!$this->clientsPros->contains($clientsPro)) {
            $this->clientsPros->add($clientsPro);
            $clientsPro->setCommercial($this);
        }

        return $this;
    }

    public function removeClientsPro(self $clientsPro): static
    {
        if ($this->clientsPros->removeElement($clientsPro)) {
            // set the owning side to null (unless already changed)
            if ($clientsPro->getCommercial() === $this) {
                $clientsPro->setCommercial(null);
            }
        }

        return $this;
    }

    public function isVerified(): bool
    {
        return $this->isVerified;
    }

    public function setIsVerified(bool $isVerified): static
    {
        $this->isVerified = $isVerified;

        return $this;
    }


}